# llamalend_pt_coverage

./: CHANGELOG.md  Curve_LlamaLend_PT_DebtCeiling_ForumPost_DRAFT.md  LICENSE-CODE.md  LICENSE-CONTENT.md  README.md  build_depth_manifest.py  coverage_model.py  discover_defillama_pool.py  discover_market.py  estimate_rho.py  fetch_rho_inputs.py  make_comparison_chart.py  make_comparison_fig.py  make_market2_figs.py  pendle_depth.py  pt_depth_curve.csv  pt_depth_curve_2.csv  pt_reusd_dec10_depth.csv  pt_reusd_dec10_depth.manifest.json  pt_susde_aug13_depth.csv  pt_susde_aug13_depth.manifest.json  pyproject.toml  requirements.txt  rho_inputs.csv  rho_inputs_dola.csv  run_analysis.py  synthetic.py
.github/workflows/: tests.yml
01_framework/: eligibility_matrix.json  eligibility_matrix.md  methodology.md  scoring_heatmap.py
02_empirical/: DUNE_SETUP_GUIDE.md  aum_timeseries.py  dune_queries.sql  empirical_findings.md  lorenz_real_data.py  market_comparison.py
03_gradient/: gradient_deepdive.md  gradient_diagram.py
04_implications/: bank_implications.md  haircut_calculator.py  limits_matrix.json
article/: article.md
data/: snapshot_metrics.json
dune/: pendle_pt_liquidity_context.sql  pool_tvl_history.sql  underlying_price_history.sql
examples/: example_depth_curve.csv
governance/: ForumPost_LlamaLend_PT.md
tests/: test_coverage_model.py  test_depth_validation.py  test_pendle_depth.py  test_published_data.py
