[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llamalend-pt-coverage"
version = "0.2.1"
description = "Liquidity coverage toolkit for sizing Pendle PT debt ceilings in LlamaLend v2 under correlated stress"
requires-python = ">=3.10,<3.14"
dependencies = ["numpy>=1.24", "pandas>=2.0", "matplotlib>=3.7", "requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
